--- a/hw1/hw1.css
+++ b/hw1/hw1.css
@@ -36,13 +36,13 @@
 }
 
 .form{
-    width: 410px;
-    height: 490px;
+    width: 26.8vw;
+    height: 65vh;
     background-color: #ffffff;
     border: 2px #CCCCCC solid; 
     box-shadow: 0px 0px 15px #CCCCCC;
     border-radius: 30px;
-    padding: 55px 35px 45px;
+    padding: 3.6vw 2.3vw 2.9vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -50,18 +50,18 @@
 }
 
 .input, .link, .btn1, .btn2{
-    width: 340px;
+    width: 22.2vw;
     font-weight: bold;
-    letter-spacing: 3.5px;
+    letter-spacing: 0.2vw;
     text-align: center;
 }
 
 .input, .btn1, .btn2{
-    height: 60px;
-    line-height: 20px;
-    padding: 20px;
+    height: 3.9vw;
+    line-height: 2.7vh;
+    padding: 1.3vw;
     border-radius: 15px;
-    font-size: 24px;
+    font-size: 1.57vw;
 }
 
 .input{
@@ -79,13 +79,13 @@ input::placeholder{
 }
 
 .link{
-    height: 40px;
+    height: 5.3vh;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.31vw;
     border-bottom: 2px #CCCCCC solid; 
     color: #D3CFD3;
-    padding-bottom: 15px;
-    margin: 10px;
+    padding-bottom: 1vw;
+    margin: 0.7vw;
 }
 
 .link:hover{
@@ -114,14 +114,14 @@ input::placeholder{
 }
 
 .slogon1{
-    width: 514px;
-    height: 25px;
+    width: 33.6vw;
+    height: 3.3vh;
     margin-top: 5%;
 }
 
 .more{
-    width: 392px;
-    height: 65px;
+    width: 25.6vw;
+    height: 8.6vh;
     margin-top: 1.5%;
 }
 
@@ -140,24 +140,25 @@ input::placeholder{
 }
 
 .intro{
-    width: 610px;
-    height: 430px;
+    width: 39.9vw;
+    height: 57vh;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
 }
 
 .poem{
-    width: 294px;
-    height: 430px;
+    width: 19.2vw;
+    height: 57vh;
 }
 
 .btn3{
     background-image: url(./src/register.png);
     background-position: center;
     background-size: contain;
-    width: 212px;
-    height: 57px;
+    background-repeat: no-repeat;
+    width: 14.4vw;
+    height: 7.6vh;
 }
 
 .btn3:hover{
@@ -165,7 +166,7 @@ input::placeholder{
 }
 
 .slogon2{
-    width: 617px;
-    height: 30px;
+    width: 40.3vw;
+    height: 4vh;
     margin-top: 5%;
 }
